@@ -85,10 +85,6 @@ public class SidescanAnalyzer extends JPanel implements MRAVisualization, Timeli
 
         lastUpdateTime = firstPingTime;
 
-        for (Integer subsys : ssParser.getSubsystemList()) {
-            sidescanPanels.add(new SidescanPanel(this, ssParser, subsys));
-        }
-
         timeline = new Timeline(0, (int) (lastPingTime - firstPingTime), 30, 1000, false);
         timeline.getSlider().setValue(0);
         timeline.addTimelineChangeListener(this);
@@ -98,13 +94,17 @@ public class SidescanAnalyzer extends JPanel implements MRAVisualization, Timeli
             public void paintTicks(Graphics g) {
                 super.paintTicks(g);
                 for (LogMarker m : markerList) {
-                    long mtime = new Double(m.getTimestamp()).longValue();
+                    long mtime = Double.valueOf(m.getTimestamp()).longValue();
                     g.drawLine(xPositionForValue((int) (mtime - firstPingTime)), 0,
                             xPositionForValue((int) (mtime - firstPingTime)), timeline.getSlider().getHeight() / 2);
                     // g.drawString(m.label, xPositionForValue((int)(mtime-firstPingTime))-10, 22);
                 }
             }
         });
+
+        for (Integer subsys : ssParser.getSubsystemList()) {
+            sidescanPanels.add(new SidescanPanel(this, ssParser, subsys));
+        }
 
         // Layout building
         setLayout(new MigLayout());
@@ -217,6 +217,7 @@ public class SidescanAnalyzer extends JPanel implements MRAVisualization, Timeli
         if (timeline != null)
             timeline.shutdown();
 
+        sidescanPanels.stream().forEach((p) -> p.clean());
         sidescanPanels.clear();
         removeAll();
         mraPanel = null;
