@@ -1069,15 +1069,15 @@ public class VehicleInfo extends JPanel implements PropertiesProvider {
             if (pArgs instanceof IMCArgs) {
                 IMCArgs nArgs = (IMCArgs) pArgs;
                 comP = PropertiesEditor.getPropertyInstance("imc.port", categoryBase, Integer.class,
-                        new Integer(nArgs.getPort()), true);
+                        Integer.valueOf(nArgs.getPort()), true);
                 propertiesList.add(comP);
-                comP = PropertiesEditor.getPropertyInstance("imc.portTCP", categoryBase, Integer.class, new Integer(
+                comP = PropertiesEditor.getPropertyInstance("imc.portTCP", categoryBase, Integer.class, Integer.valueOf(
                         nArgs.getPortTCP()), true);
                 propertiesList.add(comP);
-                comP = PropertiesEditor.getPropertyInstance("imc.udp-on", categoryBase, Boolean.class, new Boolean(
+                comP = PropertiesEditor.getPropertyInstance("imc.udp-on", categoryBase, Boolean.class, Boolean.valueOf(
                         nArgs.isUdpOn()), true);
                 propertiesList.add(comP);
-                comP = PropertiesEditor.getPropertyInstance("imc.tcp-on", categoryBase, Boolean.class, new Boolean(
+                comP = PropertiesEditor.getPropertyInstance("imc.tcp-on", categoryBase, Boolean.class, Boolean.valueOf(
                         nArgs.isTcpOn()), true);
                 propertiesList.add(comP);
                 comP = PropertiesEditor.getPropertyInstance("imc.imc-id", categoryBase, ImcId16.class,
@@ -1123,15 +1123,15 @@ public class VehicleInfo extends JPanel implements PropertiesProvider {
                 if (pArgs instanceof IMCArgs) {
                     IMCArgs nArgs = (IMCArgs) pArgs;
                     comP = PropertiesEditor.getPropertyInstance("imc.port", category, Integer.class,
-                            new Integer(nArgs.getPort()), true);
+                            Integer.valueOf(nArgs.getPort()), true);
                     propertiesList.add(comP);
-                    comP = PropertiesEditor.getPropertyInstance("imc.portTCP", category, Integer.class, new Integer(
+                    comP = PropertiesEditor.getPropertyInstance("imc.portTCP", category, Integer.class, Integer.valueOf(
                             nArgs.getPortTCP()), true);
                     propertiesList.add(comP);
-                    comP = PropertiesEditor.getPropertyInstance("imc.udp-on", category, Boolean.class, new Boolean(
+                    comP = PropertiesEditor.getPropertyInstance("imc.udp-on", category, Boolean.class, Boolean.valueOf(
                             nArgs.isUdpOn()), true);
                     propertiesList.add(comP);
-                    comP = PropertiesEditor.getPropertyInstance("imc.tcp-on", category, Boolean.class, new Boolean(
+                    comP = PropertiesEditor.getPropertyInstance("imc.tcp-on", category, Boolean.class, Boolean.valueOf(
                             nArgs.isTcpOn()), true);
                     propertiesList.add(comP);
                     comP = PropertiesEditor.getPropertyInstance("imc.imc-id", category, ImcId16.class,
