@@ -76,9 +76,9 @@ public class AngleEditorDegs extends AbstractPropertyEditor {
 	
 	public Object getValue() {
 		if (valueClass == Float.class)
-			return new Float(Math.toDegrees(angleRads));
+			return Float.valueOf(Double.valueOf(Math.toDegrees(angleRads)).floatValue());
 		else
-			return new Double(Math.toDegrees(angleRads));
+			return Double.valueOf(Math.toDegrees(angleRads));
 	}
 	
 	public void setValue(Object arg0) {
