@@ -342,7 +342,7 @@ public abstract class Maneuver implements XmlOutputMethods, PropertiesProvider, 
 
                 try {
                     Class<Maneuver> manClass = ManeuversUtil.getManeuverFromType(manType);
-                    man = manClass.newInstance();
+                    man = manClass.getDeclaredConstructor().newInstance();
                 }
                 catch (Exception e) {
                     NeptusLog.pub().error("Maneuver not found: " + manType + " (" + e.getMessage() + ")");
@@ -544,7 +544,7 @@ public abstract class Maneuver implements XmlOutputMethods, PropertiesProvider, 
     public Object clone() {
         Maneuver m;
         try {
-            m = getClass().newInstance();
+            m = getClass().getDeclaredConstructor().newInstance();
         }
         catch (Exception e) {
             e.printStackTrace();
@@ -927,9 +927,9 @@ public abstract class Maneuver implements XmlOutputMethods, PropertiesProvider, 
             Object valObj = null;
             try {
                 if (CT_NUMBER.equalsIgnoreCase(typeHint))
-                    valObj = new Double(value);
+                    valObj = Double.valueOf(value);
                 else if (CT_BOOLEAN.equalsIgnoreCase(typeHint))
-                    valObj = new Boolean(value);
+                    valObj = Boolean.valueOf(value);
                 else
                     valObj = new String(value);
             }
