@@ -39,6 +39,7 @@ import java.awt.Image;
 import java.awt.geom.Point2D;
 import java.awt.geom.Rectangle2D;
 import java.util.Hashtable;
+import java.util.Objects;
 
 import org.dom4j.Document;
 import org.dom4j.DocumentHelper;
@@ -226,6 +227,11 @@ public class TransponderElement extends AbstractElement implements NameId{
         return true;
     }
 
+    @Override
+    public int hashCode() {
+        return Objects.hash(getCenterLocation(), id, duneId);
+    }
+
     /**
      * Compare contents (interrogation channel, querry channel, transponder delay, lat, lon, depth and name) of this
      * beacon excluding the id field.
@@ -271,7 +277,7 @@ public class TransponderElement extends AbstractElement implements NameId{
                 this.setFile(new FileType(nd.asXML()));
             nd = doc.selectSingleNode("//buoy-attached");
             if (nd != null)
-                this.setBuoyAttached(new Boolean(nd.getText()).booleanValue());
+                this.setBuoyAttached(Boolean.valueOf(nd.getText()).booleanValue());
         }
         catch (Exception e) {
             NeptusLog.pub().error(this, e);
@@ -402,7 +408,7 @@ public class TransponderElement extends AbstractElement implements NameId{
         document.add(root);
 
         root.add(getFile().asElement());
-        root.addElement("buoy-attached").addText(new Boolean(isBuoyAttached()).toString());
+        root.addElement("buoy-attached").addText(Boolean.valueOf(isBuoyAttached()).toString());
 
         return document;
     }
